Fix bug where cards were crunching on mobile

--- a/src/components/events/EventCarousel/style.module.scss
+++ b/src/components/events/EventCarousel/style.module.scss
@@ -33,6 +33,5 @@
 
 .card {
   flex: none;
-  max-width: calc(100vw - 6rem);
   width: 20rem;
 }
